k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp2-backend
  namespace: opsforge-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testapp2-backend
  template:
    metadata:
      labels:
        app: testapp2-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/biraj49/testapp2-backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
