k8s/ingress-hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp2
  namespace: opsforge-system
spec:
  ingressClassName: nginx
  rules:
    - host: testapp2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp2-frontend
                port:
                  number: 80
